--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#H2 Database Configuration
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:mydb
+#spring.jpa.hibernate.ddl-auto=update
+
+#MySQL Database Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=root
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+
+# if you receive Timezone error, then replace the datasource url with the one below
+spring.datasource.url=jdbc:mysql://localhost:3306/mabasejpa?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+
 
