--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 #MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
